--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -667,233 +667,332 @@
     }
   </script>
 
- <script>
-    const canvas = document.getElementById("vapor");
-    const ctx = canvas.getContext("2d", { alpha:true });
+ <!-- HERO / SHEET ScrollTrigger
+     ✅ Assumes `hero` and `sheet` already exist (DO NOT redeclare them here)
+-->
+<script>
+  gsap.registerPlugin(ScrollTrigger);
 
-    // Offscreen buffer (we render the sim here, then blur-composite to main)
-    const buf = document.createElement("canvas");
-    const btx = buf.getContext("2d", { alpha:true });
+  // Desktop only (mobile fallback handled in CSS)
+  if (!window.matchMedia("(max-width: 980px)").matches) {
+    // uses existing `sheet`
+    gsap.set(sheet, { y: window.innerHeight }); // matches the translateY(100vh) idea
 
-    const S = {
-      w:0, h:0,
-      dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
-      t:0,
+    gsap.to(sheet, {
+      y: 0,
+      ease: "none",
+      scrollTrigger: {
+        // uses existing `hero`
+        trigger: hero,
+        start: "top top",
+        end: "+=70%",   // slide duration
+        scrub: 0.9,
+        pin: true,       // pins hero only during the slide
+        pinSpacing: true,
+        anticipatePin: 1
+      }
+    });
 
-      // slow drift
-      speed: 0.0046,
+    // refresh on resize so y uses updated vh
+    window.addEventListener("resize", () => ScrollTrigger.refresh());
+  }
+</script>
 
-      // ✅ smoothness / pixel control
-      // Higher scale = less pixelation. We also blur composite, so this stays airy.
-      scale: 0.70,     // (0.65–0.85 recommended)
-      fade: 0.22,     // less fade = more presence
-        glow: 0.25,      // tiny bump (still subtle)
-    density: 0.66,   // stronger vapor overall
+<!-- VAPOR CANVAS
+     ✅ Desktop unchanged
+     ✅ Mobile-only combo: melt pass + higher sim res + softer detail pass
+-->
+<script>
+  const canvas = document.getElementById("vapor");
+  const ctx = canvas.getContext("2d", { alpha:true });
 
-      // across-screen band behavior
-      amp: 0.16,
-      drift: 0.16,
-      band: 0.16,
-      breakUp: 1.05,
+  // Offscreen buffer (we render the sim here, then blur-composite to main)
+  const buf = document.createElement("canvas");
+  const btx = buf.getContext("2d", { alpha:true });
 
-      // composite blur (kills pixel blocks)
-      blurBase: 10,    // main blur pass
-      blurDetail: 4,   // definition pass
-      blurGlow: 14,    // bloom pass
+  // ✅ Mobile-only post + melt buffers (to blend circles)
+  const post = document.createElement("canvas");
+  const ptx  = post.getContext("2d", { alpha:true });
 
-      // mouse drift
-      mx:0, my:0, px:0, py:0
-    };
+  const melt = document.createElement("canvas");
+  const mtx  = melt.getContext("2d", { alpha:true });
 
-    function resize(){
-      S.w = Math.floor(window.innerWidth);
-      S.h = Math.floor(window.innerHeight);
+  const mqMobile = window.matchMedia("(max-width: 980px)");
+  let isMobile = mqMobile.matches;
+  mqMobile.addEventListener?.("change", (e) => { isMobile = e.matches; resize(); });
 
-      // Main canvas uses DPR for sharp UI layers
-      canvas.width  = Math.floor(S.w * S.dpr);
-      canvas.height = Math.floor(S.h * S.dpr);
-      canvas.style.width  = S.w + "px";
-      canvas.style.height = S.h + "px";
-      ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
+  const S = {
+    w:0, h:0,
+    dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
+    t:0,
 
-      // ✅ Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
-      // Render buffer in its own pixel space
-      buf.width  = Math.floor(S.w * S.scale);
-      buf.height = Math.floor(S.h * S.scale);
-      btx.setTransform(1,0,0,1,0,0);
+    // slow drift
+    speed: 0.0046,
 
-      // store for step()
-      S.bw = buf.width;
-      S.bh = buf.height;
+    // ✅ smoothness / pixel control (desktop baseline — unchanged)
+    scale: 0.70,
+    fade: 0.22,
+    glow: 0.25,
+    density: 0.66,
 
-      // Quality hints
-      ctx.imageSmoothingEnabled = true;
-      ctx.imageSmoothingQuality = "high";
-      btx.imageSmoothingEnabled = true;
-      btx.imageSmoothingQuality = "high";
+    // across-screen band behavior
+    amp: 0.16,
+    drift: 0.16,
+    band: 0.16,
+    breakUp: 1.05,
 
-      // clear
-      btx.fillStyle = "rgba(0,0,0,1)";
-      btx.fillRect(0,0,S.bw,S.bh);
-      ctx.clearRect(0,0,S.w,S.h);
-    }
-    window.addEventListener("resize", resize, { passive:true });
-    resize();
+    // composite blur (desktop baseline — unchanged)
+    blurBase: 10,
+    blurDetail: 4,
+    blurGlow: 14,
 
-    window.addEventListener("pointermove", (e)=>{
-      S.mx = (e.clientX / S.w) * 2 - 1;
-      S.my = (e.clientY / S.h) * 2 - 1;
-    }, { passive:true });
+    // ✅ mobile-only best combo
+    mobileScale: 0.90,        // higher sim res on mobile (kills rings)
+    mobileDetailAlpha: 0.32,  // soften detail pass (prevents circles popping back)
+    mobileMeltDown: 0.62,     // downsample ratio for melt
+    mobileMeltBlur: 18,       // strong melt blur
 
-    const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
+    // mouse drift
+    mx:0, my:0, px:0, py:0
+  };
 
-    // organic-ish fast noise
-    function n2(x,y){
-      return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
-    }
+  function resize(){
+    S.w = Math.floor(window.innerWidth);
+    S.h = Math.floor(window.innerHeight);
 
-    // Airy puff (no bright white hotspot)
-    function puff(x,y,r, colA, colB, a){
-      const g = btx.createRadialGradient(x,y,0, x,y,r);
-      g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
-      g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
-      g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
-      g.addColorStop(1.00, colA.replace("{a}", "0"));
-      btx.fillStyle = g;
-      btx.beginPath();
-      btx.arc(x,y,r,0,Math.PI*2);
-      btx.fill();
-    }
+    // Main canvas uses DPR for sharp UI layers
+    canvas.width  = Math.floor(S.w * S.dpr);
+    canvas.height = Math.floor(S.h * S.dpr);
+    canvas.style.width  = S.w + "px";
+    canvas.style.height = S.h + "px";
+    ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
 
-    // Across-screen centerline
-    function ribbonY(u, yBase, amp, phase){
-      const t = S.t;
-      const f1 = Math.sin(t*0.95 + u*6.2 + phase);
-      const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
-      const f3 = Math.sin(t*1.35 + u*3.2);
-      const wave = f1*0.55 + f2*0.30 + f3*0.15;
-      return yBase + wave * amp;
-    }
+    // ✅ Buffer does NOT use DPR
+    const simScale = isMobile ? S.mobileScale : S.scale;
 
-    function step(){
-      S.t += S.speed;
+    buf.width  = Math.floor(S.w * simScale);
+    buf.height = Math.floor(S.h * simScale);
+    btx.setTransform(1,0,0,1,0,0);
 
-      // mouse drift
-      S.px += (S.mx - S.px) * 0.03;
-      S.py += (S.my - S.py) * 0.03;
+    // post matches buf (same pixel space as sim)
+    post.width  = buf.width;
+    post.height = buf.height;
+    ptx.setTransform(1,0,0,1,0,0);
 
-      const W = S.bw;
-      const H = S.bh;
+    // melt is smaller (mobile-only; still allocate so no branching errors)
+    const md = isMobile ? S.mobileMeltDown : 0.60;
+    melt.width  = Math.max(2, Math.floor(buf.width  * md));
+    melt.height = Math.max(2, Math.floor(buf.height * md));
+    mtx.setTransform(1,0,0,1,0,0);
 
-      // fade buffer (trails)
-      btx.globalCompositeOperation = "source-over";
-      btx.fillStyle = `rgba(0,0,0,${S.fade})`;
-      btx.fillRect(0,0,W,H);
+    // store for step()
+    S.bw = buf.width;
+    S.bh = buf.height;
 
-      // draw vapor
-      btx.globalCompositeOperation = "lighter";
+    // Quality hints
+    ctx.imageSmoothingEnabled = true;
+    ctx.imageSmoothingQuality = "high";
 
-      const layers = [
-        { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-        { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-        { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
-      ];
+    btx.imageSmoothingEnabled = true;
+    btx.imageSmoothingQuality = "high";
 
-      for(const L of layers){
-        const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
-        const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
+    ptx.imageSmoothingEnabled = true;
+    ptx.imageSmoothingQuality = "high";
 
-        const steps = 120; // continuous bands across screen
+    mtx.imageSmoothingEnabled = true;
+    mtx.imageSmoothingQuality = "high";
 
-        for(let i=0;i<=steps;i++){
-          const u = i/steps;
+    // clear
+    btx.fillStyle = "rgba(0,0,0,1)";
+    btx.fillRect(0,0,S.bw,S.bh);
+    ptx.clearRect(0,0,post.width,post.height);
+    mtx.clearRect(0,0,melt.width,melt.height);
+    ctx.clearRect(0,0,S.w,S.h);
+  }
+  window.addEventListener("resize", resize, { passive:true });
+  resize();
 
-          const TAIL = 520; // <— bigger = longer ends
-          const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
-          const yC = ribbonY(u, H*L.y, H*L.amp, L.phase) + S.py*12;
+  window.addEventListener("pointermove", (e)=>{
+    S.mx = (e.clientX / S.w) * 2 - 1;
+    S.my = (e.clientY / S.h) * 2 - 1;
+  }, { passive:true });
 
-          const band = (S.band * H);
+  const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
 
-          const tt = S.t*0.9 + L.phase + u*2.0;
-          const wx = n2(tt*0.8, u*4.0 + L.phase);
-          const wy = n2(u*3.0 - L.phase, tt*0.7);
+  // organic-ish fast noise
+  function n2(x,y){
+    return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
+  }
 
-          const jx = wx * band * 0.36 * S.breakUp;
-          const jy = wy * band * 0.30 * S.breakUp;
+  // Airy puff (no bright white hotspot)
+  function puff(x,y,r, colA, colB, a){
+    const g = btx.createRadialGradient(x,y,0, x,y,r);
+    g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
+    g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
+    g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
+    g.addColorStop(1.00, colA.replace("{a}", "0"));
+    btx.fillStyle = g;
+    btx.beginPath();
+    btx.arc(x,y,r,0,Math.PI*2);
+    btx.fill();
+  }
 
-          // soft color drift; includes #54f3a4 (mint) but avoids too much white
-          const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
-          const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
+  // Across-screen centerline
+  function ribbonY(u, yBase, amp, phase){
+    const t = S.t;
+    const f1 = Math.sin(t*0.95 + u*6.2 + phase);
+    const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
+    const f3 = Math.sin(t*1.35 + u*3.2);
+    const wave = f1*0.55 + f2*0.30 + f3*0.15;
+    return yBase + wave * amp;
+  }
 
-          const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`; // mint
-          const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
+  function step(){
+    S.t += S.speed;
 
-          const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
+    // mouse drift
+    S.px += (S.mx - S.px) * 0.03;
+    S.py += (S.my - S.py) * 0.03;
 
-          // PASS 1: wide haze sheet (defines long band, still vapor)
-          const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
-          const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
-          puff(x, yC, r1, A, B, a1);
+    const W = S.bw;
+    const H = S.bh;
 
-          // PASS 2: wisps / inner turbulence
-          const r2 = clamp(r1*0.40, 20, 88);
-          const a2 = a1 * 0.78;
-          puff(x + jx, yC + jy, r2, B, A, a2);
+    // fade buffer (trails)
+    btx.globalCompositeOperation = "source-over";
+    btx.fillStyle = `rgba(0,0,0,${S.fade})`;
+    btx.fillRect(0,0,W,H);
 
-          const off = (wy * 0.5 + 0.5) * band * 0.90;
-          puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
-          puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
-        }
+    // draw vapor
+    btx.globalCompositeOperation = "lighter";
 
-        // super soft background volume (very low alpha)
-        const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
-        const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
-        puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
+    const layers = [
+      { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
+      { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
+      { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+    ];
+
+    for(const L of layers){
+      const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
+      const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
+
+      const steps = 120; // continuous bands across screen
+
+      for(let i=0;i<=steps;i++){
+        const u = i/steps;
+
+        const TAIL = 520; // <— bigger = longer ends
+        const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
+        const yC = ribbonY(u, H*L.y, H*L.amp, L.phase) + S.py*12;
+
+        const band = (S.band * H);
+
+        const tt = S.t*0.9 + L.phase + u*2.0;
+        const wx = n2(tt*0.8, u*4.0 + L.phase);
+        const wy = n2(u*3.0 - L.phase, tt*0.7);
+
+        const jx = wx * band * 0.36 * S.breakUp;
+        const jy = wy * band * 0.30 * S.breakUp;
+
+        // soft color drift
+        const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
+        const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
+
+        const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`;
+        const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
+
+        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
+
+        // PASS 1: wide haze sheet
+        const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
+        const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
+        puff(x, yC, r1, A, B, a1);
+
+        // PASS 2: wisps / inner turbulence
+        const r2 = clamp(r1*0.40, 20, 88);
+        const a2 = a1 * 0.78;
+        puff(x + jx, yC + jy, r2, B, A, a2);
+
+        const off = (wy * 0.5 + 0.5) * band * 0.90;
+        puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
+        puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
       }
 
-      btx.globalCompositeOperation = "source-over";
-
-      // ✅ Pixel-killing composite: blur the buffer as we upscale
-      ctx.globalCompositeOperation = "source-over";
-      ctx.clearRect(0,0,S.w,S.h);
-
-      // base pass (soft)
-      ctx.save();
-      ctx.filter = `blur(${S.blurBase}px)`;
-      ctx.globalAlpha = 1;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      // detail pass (less blur, still smooth)
-      ctx.save();
-      ctx.filter = `blur(${S.blurDetail}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = 0.55;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      // glow pass (very soft)
-      ctx.save();
-      ctx.filter = `blur(${S.blurGlow}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = S.glow;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      ctx.globalAlpha = 1;
-      ctx.globalCompositeOperation = "source-over";
-      ctx.filter = "none";
+      // super soft background volume
+      const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
+      const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
+      puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
     }
 
-    gsap.ticker.fps(60);
-    gsap.ticker.add(step);
+    btx.globalCompositeOperation = "source-over";
 
-    // Reduced motion
-    if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-      gsap.ticker.remove(step);
-      for(let i=0;i<20;i++) step();
+    // ✅ Choose source texture:
+    // Desktop: use buf directly (unchanged look)
+    // Mobile: melt pass to blend circles, then use post as the source
+    let src = buf;
+
+    if (isMobile) {
+      // 1) Downsample + blur into melt
+      mtx.save();
+      mtx.clearRect(0,0,melt.width,melt.height);
+      mtx.filter = `blur(${S.mobileMeltBlur}px)`;
+      mtx.globalCompositeOperation = "source-over";
+      mtx.globalAlpha = 1;
+      mtx.drawImage(buf, 0, 0, W, H, 0, 0, melt.width, melt.height);
+      mtx.restore();
+      mtx.filter = "none";
+
+      // 2) Upsample back to post (smooth field)
+      ptx.save();
+      ptx.clearRect(0,0,post.width,post.height);
+      ptx.globalCompositeOperation = "source-over";
+      ptx.globalAlpha = 1;
+      ptx.drawImage(melt, 0, 0, melt.width, melt.height, 0, 0, post.width, post.height);
+      ptx.restore();
+
+      src = post;
     }
-  </script>
+
+    // ✅ Final composite to main canvas
+    ctx.globalCompositeOperation = "source-over";
+    ctx.clearRect(0,0,S.w,S.h);
+
+    // base pass (soft)
+    ctx.save();
+    ctx.filter = `blur(${S.blurBase}px)`;
+    ctx.globalAlpha = 1;
+    ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    // detail pass (mobile softened)
+    ctx.save();
+    ctx.filter = `blur(${S.blurDetail}px)`;
+    ctx.globalCompositeOperation = "lighter";
+    ctx.globalAlpha = isMobile ? S.mobileDetailAlpha : 0.55;
+    ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    // glow pass (very soft)
+    ctx.save();
+    ctx.filter = `blur(${S.blurGlow}px)`;
+    ctx.globalCompositeOperation = "lighter";
+    ctx.globalAlpha = S.glow;
+    ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    ctx.globalAlpha = 1;
+    ctx.globalCompositeOperation = "source-over";
+    ctx.filter = "none";
+  }
+
+  gsap.ticker.fps(60);
+  gsap.ticker.add(step);
+
+  // Reduced motion
+  if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
+    gsap.ticker.remove(step);
+    for(let i=0;i<20;i++) step();
+  }
+</script>
   <script src="app.js"></script>
 </body>
 </html>
